--- a/mainswipar/minesweeper.csproj
+++ b/mainswipar/minesweeper.csproj
@@ -116,5 +116,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Image\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
